--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     ]
   },
   "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
+  "deploy": "gh-pages -d dist",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
